# CareerBoostAI

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/src/careerboost_api/: __init__.py  main.py
backend/src/careerboost_api/api/: health.py  upload.py
backend/src/careerboost_api/core/: config.py  logging.py
backend/src/careerboost_api/domain/: __init__.py  analysis.py  ats.py  resume_sections.py  roles.py  skills.py
backend/src/careerboost_api/services/: ats_feedback.py  resume_completeness.py  resume_extraction.py  resume_intake.py  resume_text_processing.py  resume_upload.py  role_matching.py  skill_signals.py
backend/tests/: test_analysis_contract.py  test_app_factory.py  test_ats_contract.py  test_ats_feedback_service.py  test_resume_completeness.py  test_resume_intake_orchestrator.py  test_resume_text_processing.py  test_resume_upload.py  test_role_matching.py  test_role_matching_contract.py  test_skill_signals.py  test_skill_signals_contract.py
docs/: BLOCKED_BACKLOG.md  DECISION_LOG.md  DEVELOPMENT.md  ENGINEERING_CONSTITUTION.md  PRD.md  ROADMAP.md  SPRINT_1_5_COMPLETION_REPORT.md  SPRINT_1_COMPLETION_REPORT.md  SYSTEM_ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css
frontend/src/components/: ResumeUploadForm.test.tsx  ResumeUploadForm.tsx  SystemStatus.test.tsx  SystemStatus.tsx
frontend/src/config/: environment.ts
frontend/src/services/: healthService.ts  resumeUploadService.ts
frontend/src/types/: health.ts  resumeUpload.ts
