[project]
name = "careerboost-api"
version = "0.1.0"
description = "FastAPI backend foundation for CareerBoost AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136.0,<0.137.0",
  "pydantic-settings>=2.14.0,<3.0.0",
  "uvicorn[standard]>=0.49.0,<0.50.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<0.29.0",
  "pytest>=9.0.0,<10.0.0",
  "pytest-asyncio>=1.3.0,<2.0.0",
  "ruff>=0.14.0,<0.15.0",
]

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
